[gd_scene load_steps=5 format=2]

[ext_resource path="res://scripts/arrow.gd" type="Script" id=1]
[ext_resource path="res://Weapons/Arrow/arrow.glb" type="PackedScene" id=2]

[sub_resource type="BoxShape" id=1]

[sub_resource type="BoxShape" id=2]
extents = Vector3( 1, 1, 0.239418 )

[node name="arrow" type="RigidBody"]
transform = Transform( 4.37114e-08, -3.82137e-15, 1, -8.74228e-08, -1, 0, 1, -8.74228e-08, -4.37114e-08, 0, 0, 0 )
script = ExtResource( 1 )

[node name="Area" type="Area" parent="."]

[node name="CollisionShape2" type="CollisionShape" parent="Area"]
transform = Transform( 0.0125248, 0.000322876, -0.000367638, 0.000322873, 0.0227887, -0.0116985, -0.000109887, -0.00349665, 0.384349, 0.000183612, 0.00584264, 0.285655 )
shape = SubResource( 1 )

[node name="CollisionShape2" type="CollisionShape" parent="."]
transform = Transform( 0.014064, 2.30449e-10, 5.33856e-08, 2.41044e-10, 0.0160819, -4.66712e-15, 2.5719e-09, -2.1496e-16, 1.51325, 1.23669e-08, -1.08115e-15, 0.282921 )
shape = SubResource( 2 )

[node name="arrow" parent="." instance=ExtResource( 2 )]
transform = Transform( 1, 0, -4.73845e-11, -7.45058e-09, 1, -7.49665e-09, 4.59945e-11, 1.80724e-09, 1, 5.88468e-05, 0.00187254, -0.0576956 )

[node name="Timer" type="Timer" parent="."]
wait_time = 20.0
autostart = true

[node name="TimerDamageREduction" type="Timer" parent="."]
wait_time = 0.125
autostart = true

[connection signal="body_entered" from="Area" to="." method="_on_Area_body_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="timeout" from="TimerDamageREduction" to="." method="_on_TimerDamageREduction_timeout"]
